--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -1,5 +1,4 @@
-@import "modules/slider_box";
-@import "modules/keyframes";
 @import "../../node_modules/normalize.scss/normalize";
-@import "modules/third_path";
+@import "modules/header";
+@import "modules/keyframes";
 
