--- a/src/scss/modules/keyframes.scss
+++ b/src/scss/modules/keyframes.scss
@@ -3,7 +3,7 @@
     opacity: 0;
     margin-top: 10rem;
   }
-  100%{
+  100% {
     opacity: 1;
     margin-top: 0rem;
   }
@@ -14,8 +14,26 @@
     opacity: 0;
     margin-left: -3rem;
   }
-  100%{
+  100% {
     opacity: 1;
     margin-left: 0rem;
+  }
+}
+
+@keyframes card_apear {
+  0% {
+    opacity: 0;
+    bottom: 170px;
+    transform: rotateX(90deg) rotateY(10deg) rotateZ(0deg) translateX(0px) translateY(0px) translateZ(0px);
+  }
+  50% {
+    opacity: 0;
+    bottom: 170px;
+    transform: rotateX(90deg) rotateY(10deg) rotateZ(0deg) translateX(0px) translateY(0px) translateZ(0px);
+  }
+  100% {
+    transform: rotateX(0deg) rotateY(0deg) rotateZ(0deg) translateX(0px) translateY(0px) translateZ(0px);
+    bottom: -15px;
+    opacity: 1;
   }
 }
