--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -1,4 +1,4 @@
 @import "../../node_modules/normalize.scss/normalize";
-@import "modules/header";
+@import "modules/content";
 @import "modules/keyframes";
 
