--- a/src/scss/modules/content.scss
+++ b/src/scss/modules/content.scss
@@ -298,6 +298,7 @@
       background-size: 100% 100%;
       background-image: url(../img/snikers/snk_full.jpg);
       perspective: 500px;
+      overflow-x: hidden;
     }
 
   }
@@ -320,6 +321,8 @@
     transition-delay: .2s;
     overflow: auto;
     border: 1px solid gray;
+    overflow-x: hidden;
+
 
     .box_third_ipad_cover {
       width: 100%;
@@ -328,6 +331,7 @@
 
       background-image: url(../img/snikers/snk_full.jpg);
       background-size: 100% 100%;
+      overflow-x: hidden;
     }
   }
 
@@ -343,6 +347,8 @@
       height: 600%;
       background-image: url(../img/snikers/snk_iphone.jpg);
       background-size: 100% 100%;
+      overflow-x: hidden;
+
     }
   }
 
@@ -358,6 +364,7 @@
     bottom: -7%;
     left: 57%;
     opacity: 1;
+    overflow-x: hidden;
   }
 }
 
@@ -373,6 +380,8 @@
   -webkit-box-shadow: 10px 10px 5px 0px rgba(0, 0, 0, 0.75);
   -moz-box-shadow: 10px 10px 5px 0px rgba(0, 0, 0, 0.75);
   box-shadow: 10px 10px 5px 0px rgba(0, 0, 0, 0.75);
+  overflow-x: hidden;
+
 
   &:hover {
     margin-top: -15px;
@@ -406,12 +415,16 @@
   transition-delay: .2s;
   overflow: auto;
   border: 1px solid gray;
+  overflow-x: hidden;
+
 
   .box_fourth_ipad_cover {
     width: 100%;
     height: 450%;
     background-image: url(../img/restaurant/restaurant.jpg);
     background-size: cover;
+    overflow-x: hidden;
+
   }
 }
 
@@ -419,12 +432,16 @@
   width: 22%;
   height: 50%;
   //left: -5%;
+  overflow-x: hidden;
+
 
   .box_fourth_iphone_cover {
     width: 100%;
     height: 723%;
     background-image: url(../img/restaurant/restaurant_iphone.jpg);
     background-size: contain;
+    overflow-x: hidden;
+
   }
 }
 
