--- a/src/scss/modules/content.scss
+++ b/src/scss/modules/content.scss
@@ -1,4 +1,6 @@
 @import url('https://fonts.googleapis.com/css2?family=Barrio&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Bungee+Shade&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Offside&display=swap');
 
 
 
@@ -608,10 +610,9 @@
       animation-duration: .4s;
       animation-fill-mode: forwards;
       font-family: 'Barrio', cursive;
-      font-size: 25px;
-      //opacity: 0;
-      //color: white !important;
-      //font-size: 30px;
+      font-family: 'Bungee Shade', cursive;
+      font-family: 'Offside', cursive;
+      font-size: 21px;
     }
   }
 
